# futuristic-ui

./: Cargo.toml  README.md  TODO.md  build.sh  index.html  serve.sh  start_optimized.sh
.github/workflows/: rust.yml
.scripts/: deploy.sh
src/: animate_list.rs  button.rs  common.rs  frame.rs  fui_button.rs  image.rs  image_effects.rs  lib.rs  nav_header.rs  paragraph.rs  sounds.rs  spinner.rs  theme.rs
src/theme/: tests.rs
