[package]
name = "futuristic-ui"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { version = "0.45.1", features = ["with-measure"] }
#sauron = { version = "0.45.1", features = ["with-measure"], path ="../sauron" }
sauron-markdown = "0.45.0"
#sauron-markdown = { version = "0.45.0", path = "../sauron-markdown" }
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }
serde_json = { version = "1", features = ["preserve_order"] }
console_error_panic_hook = { version = "0.1" }
wee_alloc = { version = "0.4" }
css-colors = "1" # for using lighten, and darken when calculating theme colors
css-color = "0.1.1" #for parsing hex color into rgb, don't get mix with css-colors with a `s`
base64 = "0.13.0"

[dev-dependencies]
color_processing = "0.6.0"


[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[patch.crates-io]
#sauron = { git = "https://github.com/ivanceras/sauron", branch = "master" }
#sauron = { path = "../sauron" }
#sauron-markdown = { path = "../sauron-markdown" }
